<?xml version="1.0" encoding="utf-8"?>
    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="21dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ProductImage"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:foregroundGravity="center"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_product"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/ProductImage"
            />

        <TextView
            android:id="@+id/ProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/productname_order"
            app:layout_constraintTop_toBottomOf="@+id/divider_product"
            app:layout_constraintStart_toStartOf="parent"
            />
            <TextView
                android:id="@+id/discription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/Product_discription"
                android:textSize="11dp"
                app:layout_constraintTop_toBottomOf="@+id/ProductName"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/Product_Price"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discription"
                app:layout_constraintStart_toEndOf="@+id/product_discount"
                />
            <TextView
                android:id="@+id/product_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_price"
                android:layout_margin="2dp"
                android:textColor="?attr/color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discription"
                />
            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/save_25"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_price"
                app:layout_constraintTop_toBottomOf="@+id/discription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>