<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.hastkala.OrderActiviry">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/order_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/orderid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderId"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_orderid"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginStart="60dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/orderid"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/Ordered_ProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="9dp"
                    android:text="@string/productname_order"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_orderid" />
                <ImageView
                    android:id="@+id/Ordered_ProductImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="9dp"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.898"
                    app:layout_constraintStart_toEndOf="@+id/Ordered_ProductName"
                    app:layout_constraintTop_toBottomOf="@+id/divider_orderid"
                    app:layout_constraintVertical_bias="0.056" />

                <TextView
                    android:id="@+id/Ordered_Quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:text="@string/Quantity_Order"
                    app:layout_constraintEnd_toStartOf="@+id/Ordered_ProductImage"
                    app:layout_constraintStart_toEndOf="@+id/Ordered_ProductPrice"
                    app:layout_constraintTop_toTopOf="@+id/Ordered_ProductName" />
                <TextView
                    android:id="@+id/Ordered_ProductSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/Ordered_Quantity"
                    app:layout_constraintStart_toStartOf="@+id/Ordered_Quantity"
                    app:layout_constraintEnd_toEndOf="@+id/Ordered_Quantity"
                    android:text="@string/ProductSize_Order"
                    />
                <TextView
                    android:id="@+id/Ordered_ProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ProductPrice_Order"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:layout_margin="19dp"
                    app:layout_constraintStart_toStartOf="@+id/Ordered_ProductDiscription"
                    app:layout_constraintTop_toBottomOf="@+id/Ordered_ProductDiscription"
                    />
                <TextView
                    android:id="@+id/Ordered_ProductDiscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ProductDiscription_Order"
                    app:layout_constraintStart_toStartOf="@+id/Ordered_ProductName"
                    app:layout_constraintTop_toBottomOf="@+id/Ordered_ProductName"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_finalorder"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Ordered_ProductImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/Order_Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderStatus_Text"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider_finalorder"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/Order_Status_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OrderStatus"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider_finalorder"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_OrderStatus"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Order_Status"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/edit_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Btn_Cancle"
                    style="?attr/borderlessButtonStyle"
                    app:layout_constraintTop_toBottomOf="@id/divider_OrderStatus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>